# discorsair

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: app.json.template
docs/: architecture.md  cli.md  future-extensions.md  plugin-development.md  schema.md  usage.md
plugins/sample_forum_ops/: manifest.json  plugin.py
scripts/: release_guard.py
src/discorsair/: __init__.py  cli.py
src/discorsair/core/: __init__.py  cookies.py  request_queue.py  requester.py  session.py
src/discorsair/discourse/: __init__.py  client.py  endpoints.py  models.py  queued_client.py
src/discorsair/flows/: __init__.py  daily.py  like.py  reply.py  status.py  stream_analyze.py  watch.py
src/discorsair/plugins/: __init__.py  backend.py  manager.py  validation.py
src/discorsair/runtime/: __init__.py  crawl_lock.py  factory.py  runner.py  settings.py  state.py  types.py
src/discorsair/runtime/commands/: __init__.py  actions.py  context.py  notify.py  serve.py  status.py  (+2 more)
src/discorsair/server/: __init__.py  http_server.py
src/discorsair/storage/: __init__.py  base.py  postgres_store.py  sqlite_store.py  transfer.py
src/discorsair/utils/: __init__.py  config.py  jsonc.py  logging.py  notify.py  retry.py  ua_map.py
tests/: test_cli_runtime.py  test_flows.py  test_infra.py  test_plugins.py  test_postgres_integration.py  test_release_guard.py  test_requester.py  test_runtime_factory.py  test_session.py  test_transfer.py
